# GAI4_course

./: .gitignore  README.md
HW_1/: 01_TrainModel.html  02_Evaluation.html
HW_2/: 00_PrepData.ipynb  01_DeepEnsemble_OOD.ipynb  02_Autoencoder_OOD.ipynb
HW_3/: 00_PrepData.html  00_PrepData.ipynb  01_TrainModel.html  01_TrainModel.ipynb  02_Evaluation.html  02_Evaluation.ipynb
HW_3_sol/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Evaluation.ipynb
HW_4/: 00_PrepData.html  00_PrepData.ipynb  01_TrainModel.html  01_TrainModel.ipynb  02_Evaluation.html  02_Evaluation.ipynb  README.md  pyproject.toml
HW_5/: 00_PrepData.html  00_PrepData.ipynb  00_PrepData_Ex4.html  01_Translate.html  01_Translate.ipynb  01_Translate_Ex4.html  02_Summarize_OCR.html  02_Summarize_OCR.ipynb  02_Summarize_OCR_Ex4.html  README.md  pyproject.toml
HW_5/prepared/: ocr.json  summary.json  transcript.json  translation.json
HW_5/src/video_pipeline/: __init__.py  audio_extractor.py  cli.py  frame_extractor.py  whisper_pipeline.py
Unit_0/: README.md
Unit_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Inference.ipynb  03_Debug_Model.ipynb
Unit_3/: 00_PrepData.ipynb  01_DenoisingAutoencoder.ipynb  02_AnomalyDetection.ipynb
Unit_4/: 00_FC_Autoencoder_2D.ipynb  01_FC_Autoencoder_3D.ipynb  02_VAE_2D.ipynb  03_VAE_3D.ipynb  04_LatentWalk_VAE.ipynb  05_LatentWalk_AE.ipynb  latents_ae_2d.npz  latents_ae_3d.npz
Unit_5/: 00_PrepData_MNIST.ipynb  01_GAN_MNIST.ipynb  02_Evaluate_GAN_MNIST.ipynb  README.md  pyproject.toml
Unit_5_pix2pixHD/: 00_PrepData_BBBC039.ipynb  01_pix2pixHD_Training.ipynb  02_Evaluate_pix2pixHD.ipynb  README.md  pyproject.toml
Unit_6/: 00_PrepData_BBBC039.ipynb  01_UNet_Training.ipynb  02_Evaluate_UNet.ipynb
Unit_7/: 00_PrepData_SRCACO2.ipynb  01_Train.ipynb  02_Evaluate.ipynb  README.md  pyproject.toml
Unit_9/: .gitignore  00_PrepData.ipynb  01_Translate.ipynb  02_Summarize_OCR.ipynb  README.md  pyproject.toml
Unit_9/src/video_pipeline/: models.py  ocr_pipeline.py  qwen_text.py
