[project]
name = "unit-7"
version = "0.1.0"
description = "Unit 7: Diffusion super-resolution (SR3-style conditional DDPM) on SR-CACO-2 X4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.31.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab",
    "matplotlib>=3.10.8",
    "numpy",
    "scikit-image>=0.25.0",
    "tifffile>=2024.1.0",
    "tqdm>=4.67.3",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
